<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/warnadasar"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/logologin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/warnaputih"
            android:hint="@string/username"
            android:textColor="@color/warnaputih"
            android:textColorHint="@color/warnaputih" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/warnaputih"
            android:hint="@string/katasandi"
            android:textColor="@color/warnaputih"
            android:textColorHint="@color/warnaputih" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/customtomboltransparan"
            android:text="@string/Login"
            android:textColor="@color/warnaputih" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="OR"
            android:textColor="@color/warnaputih"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/customtomboltransparan"
            android:text="@string/konekfacebook"
            android:textColor="@color/warnaputih"
            android:drawableStart="@drawable/logologinfacebook"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="240dp"
                android:layout_height="20dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="doesn't have account?"
                android:textColor="@color/warnaputih" />

            <TextView
                android:id="@+id/btn_daftar"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="217dp"
                android:layout_marginTop="15dp"
                android:text="@string/tomboldaftar"
                android:textColor="@color/warnaputih" />
        </RelativeLayout>
    </LinearLayout>




</LinearLayout>